--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -45,36 +45,47 @@
     </div>
   </div>
 
-  <div class="page-content-intro-hr">INTRODUCTION</div>
+  <!-- <div class="page-content-intro-hr">INTRODUCTION</div> -->
 
   <div class="homepage-content-section intro-container">
-    <div class="developer-name">Hi, I’m Yingi.</div>
-    <div class="developer-title"> Angular Front-End Developer</div>
+    
+    <div class="developer-name">Hi, I’m <span class="name">Yingi</span></div>
+    <div class="developer-title">Angular Front-End Developer</div>
 
-      <p>
-      I craft responsive, scalable, and user-friendly Single-Page applications (<span class="highlight">SPA</span>) that are clean, and robust using
-      <span class="highlight">Angular Framework</span>. I enjoy solving complex problems and transforming ideas into
-      intuitive digital products. </p>
-      <p>
-      My expertise includes  SCSS, JavaScrip, TypeScript, RxJS, NgRx, and REST API
-      integration, along with Unit Test and Git & GitHub.  
-      
-       Please check out my projects and reach out if you'd like to chat!
-      </p>
+    <p>
+      I craft responsive, scalable, and user-friendly Single-Page applications
+      (<span class="highlight">SPA</span>) that are clean, and robust using
+      <span class="highlight">Angular Framework</span>. My expertise includes
+      SCSS, JavaScrip, TypeScript, RxJS, NgRx, and REST API Integration, along
+      with Unit Testing, Git and GitHub. Please check out my projects and reach
+      out if you'd like to chat!
+    </p>
 
     <div class="intro-btn-container">
-        <button type="button" class="intro-btn projects-btn" (click)="redirectToProjects()">
-          <i class="bi bi-app-indicator"></i>
-            Projects 
-          </button>
-            <button type="button" class="intro-btn gitHub-btn " (click)="openHyperLink(gitHubRepo)">
-              <i class="bi bi-github"></i>
-            GitHub
-          </button>
-          <button type="button" class="intro-btn linkedin-btn" (click)="openHyperLink(linkedIn)">
-            <i class="bi bi-linkedin"></i>
-            linkedIn
-          </button>
-        </div>
+      <button
+        type="button"
+        class="intro-btn projects-btn"
+        (click)="redirectToProjects()"
+      >
+        <i class="bi bi-app-indicator"></i>
+        Projects
+      </button>
+      <button
+        type="button"
+        class="intro-btn gitHub-btn"
+        (click)="openHyperLink(gitHubRepo)"
+      >
+        <i class="bi bi-github"></i>
+        GitHub
+      </button>
+      <button
+        type="button"
+        class="intro-btn linkedin-btn"
+        (click)="openHyperLink(linkedIn)"
+      >
+        <i class="bi bi-linkedin"></i>
+        linkedIn
+      </button>
+    </div>
   </div>
 </div>
