--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div class="projects-page-main" id="projects-page-main">
-  <div class="page-content-intro-hr">featured</div>
+  <div class="page-content-intro-hr">projects selection</div>
 
   <section class="project-details">
     <div class="top-container">
@@ -91,6 +91,7 @@
         </div>
       </div>
     </div> -->
+    
   </section>
 
    <!-- <div class="page-content-intro-hr">selection</div> -->
