--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,46 +1,31 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
-  <div class="page-content-intro-hr">tech stack</div>
+  <div class="page-content-intro-hr">skills, tech, and tools</div>
 
   <div class="sets-container">
     <div class="set-container">
-      <div class="heading">Key skills</div>
+      <div class="heading">Tech Stack</div>
       <div class="set">
         <span class="skill"><i class="bi bi-code-slash"></i> HTML5</span>
         <span class="skill"><i class="bi bi-code-slash"></i> SCSS</span>
-        <span class="skill"
-          ><i class="bi bi-code-slash"></i> Bootstrap 5</span
-        >
-        <span class="skill"
-          ><i class="bi bi-code-slash"></i> JavaScript</span
-        >
-        <span class="skill"
-          ><i class="bi bi-code-slash"></i> TypeScript</span
-        >
-
-        <span class="skill"
-          ><i class="bi bi-code-slash"></i> Angular 16+</span
-        >
+        <span class="skill"><i class="bi bi-code-slash"></i> Bootstrap 5</span>
+        <span class="skill"><i class="bi bi-code-slash"></i> JavaScript</span>
+        <span class="skill"><i class="bi bi-code-slash"></i> TypeScript</span>
+        <span class="skill"><i class="bi bi-code-slash"></i> Angular 16+</span>
       </div>
     </div>
     <div class="set-container">
-      <div class="heading">concepts</div>
+      <div class="heading">Key skills</div>
       <div class="set">
-        <span class="skill"
-          ><i class="bi bi-lightbulb"></i> Responsive UIs</span
-        >
-        <span class="skill"
-          ><i class="bi bi-lightbulb"></i> SEO (Open Graphs)
-        </span>
+        <span class="skill"><i class="bi bi-lightbulb"></i> Responsive UIs</span>
+        <span class="skill"><i class="bi bi-lightbulb"></i> SEO & PO</span>
         <span class="skill"><i class="bi bi-lightbulb"></i> RESTful API</span>
-        <span class="skill"
-          ><i class="bi bi-lightbulb"></i> Performance (SSR)</span
-        >
+        <span class="skill"><i class="bi bi-lightbulb"></i> Debugging</span>
         <span class="skill"><i class="bi bi-lightbulb"></i> Unit Testing</span>
-
         <span class="skill"><i class="bi bi-lightbulb"></i> Git & GitHub</span>
       </div>
     </div>
-    <div class="set-container">
+    
+    <div class="set-container frameworks">
       <div class="heading">frameworks & libs</div>
       <div class="set">
         <span class="skill"><i class="bi bi-box"></i> Angular 16+</span>
@@ -59,9 +44,7 @@
         <span class="skill"><i class="bi bi-app-indicator"></i> Angular CLI</span>
         <span class="skill"><i class="bi bi-app-indicator"></i> DevTool</span>
         <span class="skill"><i class="bi bi-app-indicator"></i> Postman</span>
-        <span class="skill"
-          ><i class="bi bi-app-indicator"></i> Karma & Jasmine</span
-        >
+        <span class="skill"><i class="bi bi-app-indicator"></i> Karma & Jasmine</span>
         <span class="skill"><i class="bi bi-app-indicator"></i> Git bash</span>
       </div>
       <div class="btn-container">
