--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -5,7 +5,7 @@
     grid-template-columns: 1fr;
     row-gap: 20px;
     font-size: $font-size-sm;
-     margin-bottom: 15px;
+    margin-bottom: 15px;
 
     //hr line styles
     @include page-content-intro-hr;
@@ -16,12 +16,33 @@
         border: none;
         padding: $spacing-sm $spacing-sm ;
 
+
         form {
             padding: 0 $spacing-sm;
             display: grid;
             row-gap: 10px;
             grid-template-columns: 1fr;
             margin-bottom: 15px;
+            position: relative;
+
+            #spinner-container {
+
+                background: rgba(0, 0, 0, 0.6);
+
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                .spinner {
+                    img {
+                        margin-top: 70px;
+                        height: 45px;
+                    }
+                }
+            }
+
 
             .invalid-form-message {
                 color: $error-color;
@@ -56,7 +77,7 @@
                             border: 1px solid #e5e5e5;
 
                             &::placeholder {
-                                font-size:12px;
+                                font-size: 12px;
                                 color: lightgrey;
                             }
 
@@ -98,12 +119,16 @@
                 column-gap: 15px;
 
                 .button {
-                    padding: 6px 20px;
+                    padding: 4px 20px;
                     border: none;
                     color: #fff;
                     cursor: pointer;
                     text-transform: uppercase;
-                    border-radius: $spacing-xs - 1px;
+                    border-radius: $spacing-xs - 2px;
+
+                    &:hover {
+                        background-color: $comp-default-font-color;
+                    }
                 }
 
                 .submit-button {
@@ -144,5 +169,9 @@
                 }
             }
         }
+    }
+
+      @include respond-to("xs") {
+        margin-bottom: -10px;
     }
 }
