--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -4,8 +4,4 @@
 @forward 'skills-set';
 @forward 'projects';
 @forward 'contact';
-@forward 'page-not-found';
-@forward 'faq';
-@forward 'gallery';
-@forward 'news';
-@forward 'weather';
+@forward 'page-not-found';;
