--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -13,7 +13,7 @@
         </p>
       </div>
     </div>
-    <div class="about-container">
+    <div class="about-container background">
       <div class="set-heading">Background</div>
       <div class="set-container">
         <p>
