--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 20px;
-        margin-bottom: 15px;
+    margin-bottom: 15px;
 
     //hr line styles
     @include page-content-intro-hr;
@@ -15,7 +15,7 @@
         row-gap: 25px;
         column-gap: 15px;
         text-align: left;
-     
+
         .set-container {
             box-shadow: $light-box-shadow;
             border-radius: $spacing-xs;
@@ -75,9 +75,17 @@
     }
 
     @include respond-to("xs") {
+         margin-bottom: -10px;
+
         .sets-container {
+
             .set-container {
                 text-align: center;
+
+                &.frameworks {
+                    display: none;
+                }
+
 
                 .set {
                     display: grid;
@@ -93,13 +101,14 @@
 
                 .btn-container {
                     text-align: center;
+                    font-size: $font-size-xs;
 
                     .explore {
                         display: block;
                         text-transform: uppercase;
-                        padding: $spacing-xs;
+                        padding: $spacing-sm - 2px;
                         background-color: red;
-                        margin: $spacing-lg 15% 0;
+                        margin: $spacing-md 30% 0;
                         border-radius: $spacing-xs;
                         color: $light-neutral-font-color;
                     }
