Integrated geolocation weather

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -10,7 +10,7 @@
             [src]="'./img/projects/' + project.imageName + '.png'"
             [alt]="project.imageName"
             title="View Site"
-            loading="lazy"
+            loading="eager"
           />
         </div>
         <div class="project-description">
