--- a/src/app/features/contact/pages/contact/contact.component.html
+++ b/src/app/features/contact/pages/contact/contact.component.html
@@ -6,7 +6,7 @@
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
       
       <div *ngIf="isSending == true" id="spinner-container">
-        <app-spinner></app-spinner>
+         <app-spinner [spinnerMessage] = "isSendingMessage" ></app-spinner >
       </div>
 
       <div *ngIf="isFormError" class="invalid-form-message">
