--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,4 +1,4 @@
 <div class="spinner">
   <img src="spinner/spinner3.gif" alt="Loading spinner" class="" />
-  <p>sending..</p>
+  <p>{{spinnerMessage}}</p>
 </div>
