--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -175,7 +175,7 @@
   font-family: "Ubuntu", sans-serif;
   font-weight: 300;
   font-style: normal;
-  font-size: 14px;
+  font-size: $font-size-sm + 1px;
   line-height: 1.5;
 }
 
