--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -34,7 +34,7 @@
 
             .set-container {
                 padding: 4px $spacing-sm;
-                  font-size: $font-size-md;
+                  font-size: $font-size-sm + 2px;
 
                 i {
                     padding-right: 3px;
