--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -56,6 +56,6 @@
   </div>
 
   <div *ngIf="isLoading == true" id="spinner-container">
-    <app-spinner [spinnerMessage]="isLoadingMessage"></app-spinner>
+    <app-spinner [processMessage]="isLoadingMessage"></app-spinner>
   </div>
 </div>
