--- a/src/styles/components/_spinner.scss
+++ b/src/styles/components/_spinner.scss
@@ -2,14 +2,21 @@
 
 .spinner {
   position: absolute; //position relative to parent
-  text-align: center;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.6);
 
-  p{
-    text-transform: uppercase;
+  img {
+    height: 70px;
+  }
+
+  p {
+    margin-top: -15px;
     font-size: $font-size-md;
-    color: lightgrey;
-    font-weight: bold;
+    text-transform: uppercase;
   }
 }
