--- a/src/styles/layout/_page-intro.scss
+++ b/src/styles/layout/_page-intro.scss
@@ -26,9 +26,7 @@
         cursor: pointer;
 
         .weather-icon {
-
             align-content: center;
-
 
             img {
                 height: 38px;
@@ -37,7 +35,6 @@
 
         .weather-temp {
             align-content: center;
-
             padding-top: -2px;
             margin-left: -5px;
             height: 38px;
@@ -113,25 +110,15 @@
                 height: 150px;
                 cursor: pointer;
             }
-
         }
     }
 
     #spinner-container {
-
         position: absolute;
         top: 0;
         bottom: 0;
         left: 0;
-        right: 0;
-        background: rgba(0, 0, 0, 0.6);
-
-        .spinner {
-            img {
-                margin-top: 70px;
-                height: 45px;
-            }
-        }
+        right: 0
     }
 }
 
